methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:16: error: illegal start of simple expression
  var arr = [[1,2], [2,3]];
            ^